Fixed bug where add/edit kept data from prev instances

--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -53,7 +53,7 @@ label, th {
 }
 
 #login-form {
-  background: url('http://www.coredigitalworks.com/wp-content/uploads/2014/07/Engagement-through-gamification.jpg');
+  background: url('http://www.gamecentrics.com/wp-content/uploads/2016/01/Background-copy.jpg');
   background-size: cover;
   background-position: center;
   height: 100%;
