--- a/client/css/common/navbar.scss
+++ b/client/css/common/navbar.scss
@@ -3,7 +3,7 @@ $nav-bg : #2A3F54;
   box-sizing: border-box;
   background: $nav-bg;
   color: white;
-  height: 100%;
+  min-height: 100%;
   min-width: 15em;
 
   a {
@@ -25,12 +25,14 @@ $nav-bg : #2A3F54;
     .nav-link-container {
       width: 100%;
       overflow: hidden;
-      padding: 1em;
-
+      padding: 0.75em;
       &:hover{
         background: darken($nav-bg, 7.5);
       }
       a {
+        &:before {
+          content: "> ";
+        }
         width: 100%;
       }
     }
